--- a/web/src/components/CourseCard/Coursecard.module.css
+++ b/web/src/components/CourseCard/Coursecard.module.css
@@ -1,22 +1,63 @@
-.container{
+.card_container{
   display: grid;
   grid-template: 1fr 2fr/ 1fr;
-  background-color: rgb(245, 106, 106);
+  background: linear-gradient(90deg, rgb(47, 255, 57) -10%, rgb(113, 255, 132) 50%, rgb(207, 255, 129) 110%);
+  background-size: 400% 400%;
   border-radius: 25px;
   border: 2px solid black;
-  width: 13.125rem;
-  height: 14.375rem;
+  width: 15rem;
+  height: 16rem;
+  transition: transform 0.6s ease;
+  animation: gradient 10s ease infinite;
+  box-shadow: 0 0 black;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.card_container:hover{
+  transform: scale(1.02);
+  box-shadow: 5px 10px black;
+}
+.scaleUp{
+  animation: scale(1.03);
 }
 
 .competency_name{
   background-color: white;
-  border: 1px solid rgb(0, 0, 0);
+  margin: 0.4rem;
+  display: grid;
+  grid-template: 1fr 1fr/ 1fr 1fr;
+  grid-template-areas:
+  'code pillar'
+  'title title';
+  border: 0.2rem solid rgb(0, 0, 0);
   color: black;
   border-radius: 24px;
   padding: 10px 15px;
   grid-row: 2 / 3;
 }
 
+.text_code{
+  grid-area: code;
+  font-weight: 600;
+  color: black;
+  justify-self: center;
+}
+.text_pillar{
+  grid-area: pillar;
+  font-weight: 600;
+  color: black;
+}
+
 .text{
+  grid-area: title;
   color: black;
 }
