--- a/web/src/components/CourseList/CourseList.module.css
+++ b/web/src/components/CourseList/CourseList.module.css
@@ -1,4 +1,5 @@
 .course_container{
+  padding: 0.3rem 0 0 0.3rem;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
@@ -16,7 +17,7 @@
     overflow-y: scroll;
   }
 }
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1250px) {
   .course_container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -26,7 +27,7 @@
     overflow-y: scroll;
   }
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 950px) {
   .course_container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
