--- a/web/src/components/SearchBox/SearchBox.module.css
+++ b/web/src/components/SearchBox/SearchBox.module.css
@@ -23,27 +23,10 @@
   align-items: center;
 }
 
-.searchbox_dark {
-  all: unset;
-  background-color: #000000;
-  background-image: url(../../assets/SearchIcon.svg);
-  background-repeat: no-repeat;
-  background-position: 1rem;
-  border: none;
-  border-radius: 2.5rem;
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.25) inset;
-  width: 100%;
-  height: 100%;
-  padding-left: 10%;
-  display: flex;
-  padding-left: 3rem;
-  align-items: center;
-}
-
 .searchbox:hover {
   background-color: #949494;
   color: #F2f2f2;
-  background-image: url(src/assets/SearchIconwhite.svg);
+  background-image: url(../../assets/SearchIconwhite.svg);
 }
 .searchbox:hover::-webkit-input-placeholder {
   color: #F2f2f2;
