--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -13,6 +13,8 @@
   position: absolute;
   bottom: 0;
   z-index: 100;
+
+  
   /* justify-content: center;
     align-items: center; */
 }
@@ -134,6 +136,12 @@
   margin-left: 0.5rem;
   color: black;
   width: 100%;
+
+  /* height: 100%; */
+
+  white-space: normal;
+
+  /* overflow-x: scroll; */
 }
 
 .send {
