--- a/web/src/components/CourseList/CourseList.module.css
+++ b/web/src/components/CourseList/CourseList.module.css
@@ -1,5 +1,5 @@
 .course_container{
-  padding: 0.3rem 0 0 0.3rem;
+  padding: 0.6rem 0 0.6rem 0.6rem;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
