--- a/web/src/components/ChatCard/ChatCard.module.css
+++ b/web/src/components/ChatCard/ChatCard.module.css
@@ -2,9 +2,9 @@
   display: grid;
   grid-template-columns: 2.5rem 1fr 1rem;
   padding: .4rem;
-
   transition: all 300ms;
   height: 3rem;
+  margin-bottom: 0.3rem;
 }
 
 .wrapper:hover {
@@ -12,13 +12,9 @@
 }
 
 .wrapper p {
-  /* align-self: center; */
-  /* justify-self: center; */
-
   overflow-x: hidden;
-  overflow-y: hidden;
-  margin-right: .2rem;
-  margin-bottom: .2rem;
+  /* margin-right: .2rem;
+  margin-bottom: .2rem; */
 }
 
 .wrapper > :nth-child(2) {
@@ -43,12 +39,13 @@
 }
 
 .chatIcon {
-  width: 2.5rem;
+  width: 90%;
   align-self: center;
   justify-self: center;
 }
 
 .delete {
+  width: 90%;
   margin-left: auto;
   display: grid;
   align-items: center;
