Muti line input and extra features for OLD API

--- a/web/src/components/ChattingCard/ChattingCardUser.module.css
+++ b/web/src/components/ChattingCard/ChattingCardUser.module.css
@@ -26,6 +26,14 @@
   justify-content: center;
   align-items: center;
   max-width: 65%;
+
+  /* overflow-x: new; */
+
+  word-wrap: break-word;
+}
+
+.message p {
+  width: 100%;
 }
 
 .message img {
