--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -47,14 +47,15 @@
 @keyframes typing {
   0% {
     opacity: .7;
-    transform: translateY(.2rem);
+    /* transform: translateY(.2rem); */
   }
   50% {
-    transform: translateY(-.2rem);
+    /* transform: translateY(-.2rem); */
+    opacity: 1;
   }
   100% {
-    opacity: 1;
-    transform: translateY(0);
+    opacity: .7;
+    /* transform: translateY(0); */
   }
 }
 
@@ -115,14 +116,24 @@
 .searchBar {
   padding: 0.2rem;
   width: 100%;
-  height: 100%;
-  border-radius: 2.5rem;
+  /* height: 100%; */
+  max-height: 16vh;
+  border-radius: 20px;
   background: #d9d9d9;
   box-shadow: 2px 1px 6px 0px rgba(0, 0, 0, 0.25) inset;
 
   display: grid;
   grid-template-columns: 12fr 1fr;
   /* justify-content: center; */
+  align-items: center;
+  position: relative;
+}
+
+.searchBar form {
+  /* width: 100%;
+  height: 100%; */
+
+  display: flex;
   align-items: center;
 }
 
@@ -132,14 +143,33 @@
 }
 
 .inputField {
-  all: unset;
+  /* all: unset; */
   margin-left: 0.5rem;
   color: black;
   width: 100%;
+  /* height: 5vh; */
+  /* height: 100%; */
+
+  border: none;
+  outline: none;
+  background-color: transparent;
+  resize: none;
+
+  display: block;
+  height: auto;
+
+  /* min-height: 3vh; */
+  max-height: 15vh !important;
+
+  overflow-wrap: break-word;
+  overflow-y: auto;
+  /* overflow-x: hidden; */
 
   /* height: 100%; */
 
-  white-space: normal;
+  /* white-space: normal; */
+  /* display: block;
+  overflow-x: hidden; */
 
   /* overflow-x: scroll; */
 }
