--- a/web/src/components/ChatCard/ChatCard.module.css
+++ b/web/src/components/ChatCard/ChatCard.module.css
@@ -13,6 +13,8 @@
 
 .wrapper p {
   overflow-x: hidden;
+  overflow-wrap: break-word;
+  overflow-y: hidden;
   /* margin-right: .2rem;
   margin-bottom: .2rem; */
 }
