--- a/web/src/components/CreateChatModal/CreateChatModal.module.css
+++ b/web/src/components/CreateChatModal/CreateChatModal.module.css
@@ -6,10 +6,12 @@
   left: 0;
   background-color: rgba(128, 128, 128, 0.254);
   z-index: 1000;
-  backdrop-filter: blur(5px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  backdrop-filter: blur(4px);
+  display: grid;
+  grid-template: 1fr 1.5fr /1fr 1fr 1fr;
+  grid-template-areas:
+  "blank1 head blank2"
+  "blank1 body blank2";
 }
 
 .backdrop {
@@ -19,18 +21,87 @@
   width: 100vw;
 }
 
+.new_chat_title{
+  grid-area: head;
+  display: flex;
+  position: relative;
+  align-self: end;
+  justify-content: space-between;
+  width: 40vw;
+  margin-bottom: -1rem;
+  z-index: 2;
+}
+.new_chat_title p{
+  display: flex;
+  background-color: #5e6084;
+  padding: 0.5rem 2rem;
+  border-radius: 15px 15px 0 0;
+  justify-content: center;
+}
+.new_chat_title button{
+  border: none;
+  padding: 0.5rem 1rem;
+  background-color: #5e6084;
+  border-radius: 25%;
+}
+.new_chat_title button:hover {
+  cursor: pointer;
+}
+
 .container {
-  position: absolute;
+  grid-area: body;
+  position: relative;
   background: linear-gradient(0deg, #5e6084 0%, #5e6084 100%),
     rgba(255, 255, 255, 0.1);
-  padding: 1rem;
+  padding: 1.5rem 1rem 1rem;
   border-radius: 0.5rem;
-  width: 30vw;
+  width: 40vw;
+  height: auto;
   z-index: 1;
+  align-self: start;
+}
+
+.header {
+  display: grid;
+  grid-template: 1fr / 0.2fr 1fr;
+  column-gap: 1rem;
+}
+
+.header p{
+  padding: 0.5rem;
+  border-radius: 10px;
+  background-color: white;
+  color: black;
 }
 
 .middle {
   margin-top: 0.5rem;
+  display: grid;
+  grid-template: 1fr / 1fr 0.2fr;
+  column-gap: 1rem;
+  justify-items: end;
+}
+
+.middle form{
+  display: inline;
+  width: 100%;
+  height: auto;
+}
+.middle img{
+  display: inline;
+}
+.middle input {
+  all: unset;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border-radius: 0.3rem;
+  background: white;
+  box-shadow: 2px 1px 6px 0px rgba(0, 0, 0, 0.25) inset;
+  color: black;
+  padding-left: 0.5rem;
 }
 
 @keyframes shake {
@@ -63,35 +134,13 @@
   perspective: 1000px;
 }
 
-.middle input {
-  all: unset;
-  width: 100%;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  border-radius: 0.3rem;
-  background: white;
-  box-shadow: 2px 1px 6px 0px rgba(0, 0, 0, 0.25) inset;
-  color: black;
-  padding-left: 0.5rem;
-}
+
 
 .footer {
   margin-top: 0.5rem;
   width: 100%;
   display: flex;
   justify-content: space-around;
-}
-
-.footer button:first-child {
-  border: none;
-  padding: 0.5rem 1rem;
-  background-color: red;
-  border-radius: 25%;
-}
-
-.footer button:first-child:hover {
-  cursor: pointer;
 }
 
 .footer button:last-child {
