--- a/web/src/pages/LoginPage/Login.module.css
+++ b/web/src/pages/LoginPage/Login.module.css
@@ -4,7 +4,7 @@
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: rgb(47, 50, 90);
+  background-color: #2f325a;
 }
 
 .content {
