--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,13 +3,13 @@
   font-size: 16px;
   line-height: 1.5;
   color: white;
-
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 ::-webkit-scrollbar{
+  z-index: 1000;
   width: 0.5rem;
 }
 
