Polished chat page

--- a/web/src/components/ChattingCard/ChattingCardAI.module.css
+++ b/web/src/components/ChattingCard/ChattingCardAI.module.css
@@ -33,7 +33,24 @@
   /* margin: auto; */
   /* width: 100%; */
   /* width: auto; */
+
+  /* user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; */
 }
+
+/* .message::after {
+  background-color: transparent;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: -1rem;
+} */
 
 .message:first-child {
   overflow-x: scroll;
@@ -49,6 +66,10 @@
 
 code > * {
   font-size: 1rem;
+}
+
+.wrapper > * {
+  list-style-position: inside;
 }
 
 .preference {
