--- a/web/src/components/ChattingCard/ChattingCardUser.module.css
+++ b/web/src/components/ChattingCard/ChattingCardUser.module.css
@@ -13,6 +13,10 @@
   /* width: fit-content; */
 }
 
+.userImg {
+  margin-bottom: auto;
+}
+
 .message {
   padding: 1rem;
   position: relative;
@@ -22,17 +26,17 @@
   border-radius: 1.875rem;
   background: linear-gradient(0deg, #252525 0%, #252525 100%), #252525;
   
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  max-width: 65%;
+  max-width: 90%;
 
   /* overflow-x: new; */
 
   word-wrap: break-word;
 }
 
-.message p {
+.message ReactMarkdown {
   width: 100%;
 }
 
