--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -95,6 +95,20 @@
   position: relative;
 }
 
+.fileAmount {
+  position: absolute;
+  bottom: -10px;
+  right: 0;
+
+  background-color: rgba(0, 0, 0);
+  padding: .3rem;
+  border-radius: 50%;
+}
+
+.fileAmount p {
+  font-size: 10px;
+}
+
 .attachment label {
   position: absolute;
   width: 100%;
@@ -126,6 +140,26 @@
   grid-template-columns: 12fr 1fr;
   /* justify-content: center; */
   align-items: center;
+  position: relative;
+}
+
+.searchBar div img {
+  align-self: center;
+  justify-self: center;
+}
+
+.searchBar div p {
+  position: absolute;
+  bottom: 0;
+  left: 3px;
+
+  color: red;
+}
+
+.searchBar div {
+  height: 100%;
+
+  display: flex;
   position: relative;
 }
 
