--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,10 +6,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 ::-webkit-scrollbar{
-  z-index: 1000;
+  z-index: 100000;
   width: 0.5rem;
 }
 
