--- a/web/src/components/Sidebar/LongSidebar.module.css
+++ b/web/src/components/Sidebar/LongSidebar.module.css
@@ -10,33 +10,22 @@
 .sidebar_top {
   width: 100%;
   height: auto;
-  /* flex: 1; */
   display: flex;
   flex-direction: column;
   background-color: rgb(7, 23, 247);
 }
 
-/* Return back to COURSE page button */
-/* img[src="src/assets/Back_Button.svg"] {
-  margin-left: -1rem;
-} */
-
 /* INCLUDES Back to course page button and search bar */
 .top {
   display: grid;
-  grid-template-columns: 1fr 6fr 1fr;
-  /* grid-template-rows: 2fr auto auto; */
+  grid-template: 1fr/1fr 6fr 1fr;
   grid-template-areas:
     "backBtn textArea collapseBtn"
     "sepline sepline sepline";
   align-items: center;
-  margin: 2rem;
-  /* margin-left: 2rem; */
-  margin-bottom: 1rem;
+  margin: 2rem 1.75rem 1rem 2rem;
   height: fit-content;
-  gap: 0.3rem;
-
-  margin-right: 1.75rem;
+  column-gap: 0.3rem;
 }
 
 .top p {
@@ -57,14 +46,11 @@
 
 .sepLine {
   all: unset;
-
   grid-area: sepline;
   height: 0.01rem;
-  /* z-index: 10; */
   width: 110%;
   margin-top: .5rem;
   justify-self: center;
-
   background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -137,7 +123,6 @@
 
 .open {
   /* animation: openSideBar 200ms linear forwards; */
-
   width: 100%;
   height: 100%;
   overflow: hidden;
