fix file disappear in attachment modal andcollapse

--- a/web/src/components/FileList/FileList.module.css
+++ b/web/src/components/FileList/FileList.module.css
@@ -1,5 +1,5 @@
 .file_status {
-  padding: 1.5rem;
+  padding: 0.5rem 1.5rem 1.5rem 1.5rem;
   padding-bottom: 0rem;
   margin-bottom: 1rem;
   overflow-y: scroll;
