--- a/web/src/pages/CoursePage/Course.module.css
+++ b/web/src/pages/CoursePage/Course.module.css
@@ -10,7 +10,7 @@
 .glass_layer_course{
   display: grid;
   position: absolute;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.5fr;
   grid-template-rows: 1fr 3fr;
   grid-template-areas: 
     "title user"
@@ -74,9 +74,9 @@
   font-weight: 500;
 }
 
-.userdropdown{
+.header_topright{
   display: grid;
-  grid-template-columns: 9fr 1fr 1fr;
+  grid-template-columns: 5fr 1fr 1fr;
   grid-area: user;
   justify-content: center;
   align-items: center;
@@ -85,14 +85,10 @@
 }
 
 .username{
-  font-size: 1.45rem;
+  position: relative;
+  font-size: 1.5rem;
   font-weight: 500;
-  justify-self: end;
-}
-
-span{
-  font-size: 1.45rem;
-  font-weight: 500; 
+  text-align: end;
 }
 
 .user_img{
