Prevent re render of chatUI

--- a/web/src/components/ChatScreen/ChatScreenInitialized.module.css
+++ b/web/src/components/ChatScreen/ChatScreenInitialized.module.css
@@ -1,8 +1,8 @@
 .wrapper {
   padding: 2rem;
   padding-right: 4rem;
-  padding-top: 7%;
-  padding-bottom: 8%;
+  padding-top: 4.5rem;
+  padding-bottom: 8.5vh;
   /* margin-bottom: 1rem; */
 
   /* margin-top: auto; */
