--- a/web/src/components/PillarList/PillarList.module.css
+++ b/web/src/components/PillarList/PillarList.module.css
@@ -118,3 +118,43 @@
   padding-left: 2rem;
   overflow: auto;
 }
+
+/* @media only screen and (max-width: 1500px) {
+  .pillar_course{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    list-style: none;
+    grid-area: main;
+    overflow-y: scroll;
+  }
+}
+@media only screen and (max-width: 1250px) {
+  .pillar_course{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    list-style: none;
+    grid-area: main;
+    overflow-y: scroll;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .pillar_course{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    list-style: none;
+    grid-area: main;
+    overflow-y: scroll;
+  }
+} */
+
+.course_list_container {
+  width: 100%;
+  height: 100%;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px 1fr;
+}
